public/styles.css
* {
  font-family: 'Inter', sans-serif;
  color: #a09fa3;
  font-size: 16px;
  font-weight: 500;
}

body {
  background-color: #05010d;
  margin: 0;
  padding: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  min-height: 100vh;
}

h1 {
  font-size: 36px;
  color: #fff;
  font-weight: 700;
  margin: 0 auto;
  text-align: center;
  margin-bottom: 24px;
}

p {
  font-size: 18px;
  margin: 0 auto;
  text-align: center;
}

header {
  margin-bottom: 64px;
}

form {
  background-color: #110e19;
  padding: 32px;
  border-radius: 12px;
  display: flex;
  min-width: 500px;
  flex-direction: column;
  position: relative;
  border: 1px solid #292730;
}

@media (max-width: 600px) {
  form {
    min-width: 0;
    width: 100%;
  }
}

form::before {
  position: absolute;
  content: '';
  top: -10px;
  left: -10px;
  right: -10px;
  bottom: -10px;
  background: linear-gradient(
      100.41deg,
      rgba(5, 45, 255, 0.6) 0.52%,
      rgba(62, 243, 255, 0.6) 100.52%
    ),
    linear-gradient(
      107.41deg,
      #ff3ef7 1.52%,
      #ff3ef7 30.69%,
      #051eff 75.02%,
      #051eff 101.52%
    ),
    #fff;
  border-radius: 9999px;
  filter: blur(100px);
  opacity: 0.5;
  z-index: -1;
}

label {
  margin-bottom: 8px;
}

input {
  width: 100%;
  padding-left: 12px;
  height: 40px;
  margin-bottom: 16px;
  border: 1px solid #292730;
  background-color: #05010d;
  border-radius: 8px;
  color: #fff;
  box-sizing: border-box;
}

button {
  margin-top: 16px;
  border-radius: 8px;
  cursor: pointer;
  width: 100%;
  background-color: #e8e7e8;
  padding: 8px 12px;
  border: 0;
  color: #000;
  transition:
    background-color 0.2s,
    transform 0.1s ease-in-out;
}

button:hover {
  background-color: #fff;
}

hr {
  line-height: 22px;
  box-sizing: border-box;
  height: 1px;
  margin: 0;
  margin-top: 16px;
  margin-bottom: 16px;
  background: linear-gradient(
    90deg,
    hsla(0, 0%, 100%, 0),
    hsla(0, 0%, 100%, 0.2) 50%,
    hsla(0, 0%, 100%, 0)
  );
  border: 0;
}

.github-link {
  text-decoration: none;
  align-items: center;
  display: flex;
  justify-content: center;
  text-align: center;
  margin-bottom: 32px;
  cursor: pointer;
  font-size: 14px;
  font-weight: 500;
  padding: 6px 12px;
  font-size: 14px;
  font-weight: 500;
  line-height: 16px;
  color: #fff;
  background: linear-gradient(
    90.33deg,
    rgba(34, 141, 255, 0.15),
    rgba(109, 66, 252, 0.15)
  );
  background-position-x: -1px;
  background-size: calc(100% + 2px) 100%;
  border: 1px solid hsla(0, 0%, 100%, 0.15);
  border-radius: 16px;
}

